; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_hardware.c_PrintRingBuffer.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_hardware.c_PrintRingBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@bSuspendPrintRingBuffer = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"PrintRingBuffer(): suspended\0A\00", align 1
@.str.1 = private unnamed_addr constant [44 x i8] c"PrintRingBuffer(): no lines in ring buffer\0A\00", align 1
@ulOldDelta = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [41 x i8] c"PrintRingBuffer(): lines already output\0A\00", align 1
@.str.3 = private unnamed_addr constant [72 x i8] c"PrintRingBuffer(): less lines than requested: ulDelta: %x, ulLines: %x\0A\00", align 1
@ulInPos = common dso_local global i64 0, align 8
@LINES_IN_BUFFER = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [34 x i8] c"PrintRingBuffer(): ulOutPos = %u\0A\00", align 1
@OUTPUT_WINDOW = common dso_local global i64 0, align 8
@wWindow = common dso_local global %struct.TYPE_2__* null, align 8
@OUTPUT_WINDOW_UNBUFFERED = common dso_local global i32 0, align 4
@aBuffers = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PrintRingBuffer(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = call i64 (...) @LinesInRingBuffer()
  store i64 %6, i64* %3, align 8
  store i64 0, i64* %5, align 8
  %7 = load i64, i64* @bSuspendPrintRingBuffer, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = call i32 @DPRINT(i32 ptrtoint ([30 x i8]* @.str to i32))
  %11 = call i32 (...) @LEAVE_FUNC()
  br label %100

12:                                               ; preds = %1
  %13 = load i64, i64* %3, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %12
  %16 = call i32 @DPRINT(i32 ptrtoint ([44 x i8]* @.str.1 to i32))
  %17 = call i32 (...) @LEAVE_FUNC()
  br label %100

18:                                               ; preds = %12
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @ulOldDelta, align 8
  %21 = icmp slt i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = call i32 @DPRINT(i32 ptrtoint ([41 x i8]* @.str.2 to i32))
  %24 = call i32 (...) @LEAVE_FUNC()
  br label %100

25:                                               ; preds = %18
  %26 = load i64, i64* %3, align 8
  store i64 %26, i64* @ulOldDelta, align 8
  %27 = load i64, i64* %3, align 8
  %28 = load i64, i64* %2, align 8
  %29 = icmp slt i64 %27, %28
  br i1 %29, label %30, label %36

30:                                               ; preds = %25
  %31 = load i64, i64* %3, align 8
  %32 = load i64, i64* %2, align 8
  %33 = trunc i64 %32 to i32
  %34 = call i32 @DPRINT(i32 %33)
  %35 = load i64, i64* %3, align 8
  store i64 %35, i64* %2, align 8
  br label %36

36:                                               ; preds = %30, %25
  %37 = load i64, i64* @ulInPos, align 8
  %38 = load i64, i64* %2, align 8
  %39 = sub nsw i64 %37, %38
  %40 = load i64, i64* @LINES_IN_BUFFER, align 8
  %41 = srem i64 %39, %40
  store i64 %41, i64* %4, align 8
  %42 = load i64, i64* %4, align 8
  %43 = trunc i64 %42 to i32
  %44 = call i32 @DPRINT(i32 %43)
  %45 = load i64, i64* @OUTPUT_WINDOW, align 8
  %46 = call i32 @Home(i64 %45)
  br label %47

47:                                               ; preds = %51, %36
  %48 = load i64, i64* %2, align 8
  %49 = add nsw i64 %48, -1
  store i64 %49, i64* %2, align 8
  %50 = icmp ne i64 %48, 0
  br i1 %50, label %51, label %72

51:                                               ; preds = %47
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %53 = load i64, i64* @OUTPUT_WINDOW, align 8
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i64 %53
  %55 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = load i64, i64* %5, align 8
  %58 = add nsw i64 %56, %57
  %59 = call i32 @ClrLine(i64 %58)
  %60 = load i32, i32* @OUTPUT_WINDOW_UNBUFFERED, align 4
  %61 = load i8**, i8*** @aBuffers, align 8
  %62 = load i64, i64* %4, align 8
  %63 = getelementptr inbounds i8*, i8** %61, i64 %62
  %64 = load i8*, i8** %63, align 8
  %65 = call i32 @Print(i32 %60, i8* %64)
  %66 = load i64, i64* %5, align 8
  %67 = add nsw i64 %66, 1
  store i64 %67, i64* %5, align 8
  %68 = load i64, i64* %4, align 8
  %69 = add nsw i64 %68, 1
  %70 = load i64, i64* @LINES_IN_BUFFER, align 8
  %71 = srem i64 %69, %70
  store i64 %71, i64* %4, align 8
  br label %47

72:                                               ; preds = %47
  %73 = load i8**, i8*** @aBuffers, align 8
  %74 = load i64, i64* %4, align 8
  %75 = getelementptr inbounds i8*, i8** %73, i64 %74
  %76 = load i8*, i8** %75, align 8
  %77 = getelementptr inbounds i8, i8* %76, i64 0
  %78 = load i8, i8* %77, align 1
  %79 = sext i8 %78 to i32
  %80 = icmp eq i32 %79, 58
  br i1 %80, label %81, label %100

81:                                               ; preds = %72
  %82 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %83 = load i64, i64* @OUTPUT_WINDOW, align 8
  %84 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %82, i64 %83
  %85 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %84, i32 0, i32 0
  %86 = load i64, i64* %85, align 8
  %87 = load i64, i64* %5, align 8
  %88 = add nsw i64 %86, %87
  %89 = call i32 @ClrLine(i64 %88)
  %90 = load i32, i32* @OUTPUT_WINDOW_UNBUFFERED, align 4
  %91 = load i8**, i8*** @aBuffers, align 8
  %92 = load i64, i64* %4, align 8
  %93 = getelementptr inbounds i8*, i8** %91, i64 %92
  %94 = load i8*, i8** %93, align 8
  %95 = call i32 @Print(i32 %90, i8* %94)
  %96 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %97 = load i64, i64* @OUTPUT_WINDOW, align 8
  %98 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %96, i64 %97
  %99 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %98, i32 0, i32 1
  store i32 1, i32* %99, align 8
  br label %100

100:                                              ; preds = %9, %15, %22, %81, %72
  ret void
}

declare dso_local i64 @LinesInRingBuffer(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @LEAVE_FUNC(...) #1

declare dso_local i32 @Home(i64) #1

declare dso_local i32 @ClrLine(i64) #1

declare dso_local i32 @Print(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
